owl-parser/src/parser/snapshots/owl_parser__parser__expr__tests__fn-call-fib.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"fib(x - 1) + fib(x - 2)\")"

---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: FnCall {
                callee: Expr {
                    kind: Identifier(
                        "fib",
                    ),
                    span: 0..3,
                },
                args: [
                    Expr {
                        kind: Binary {
                            lhs: Expr {
                                kind: Identifier(
                                    "x",
                                ),
                                span: 4..5,
                            },
                            op: Minus,
                            rhs: Expr {
                                kind: NumberLit(
                                    1.0,
                                ),
                                span: 8..9,
                            },
                        },
                        span: 4..9,
                    },
                ],
            },
            span: 0..10,
        },
        op: Plus,
        rhs: Expr {
            kind: FnCall {
                callee: Expr {
                    kind: Identifier(
                        "fib",
                    ),
                    span: 13..16,
                },
                args: [
                    Expr {
                        kind: Binary {
                            lhs: Expr {
                                kind: Identifier(
                                    "x",
                                ),
                                span: 17..18,
                            },
                            op: Minus,
                            rhs: Expr {
                                kind: NumberLit(
                                    2.0,
                                ),
                                span: 21..22,
                            },
                        },
                        span: 17..22,
                    },
                ],
            },
            span: 13..23,
        },
    },
    span: 0..23,
}
